--- a/client_side/package.json
+++ b/client_side/package.json
@@ -10,11 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "^7.21.5",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/material": "^5.12.2",
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-range": "^1.8.14",
     "react-router-dom": "^6.10.0",
+    "react-slider": "^2.0.4",
     "sass": "^1.62.1",
     "swiper": "^9.2.4"
   },
