--- a/client_side/package.json
+++ b/client_side/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.12.2",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
+    "cookies-js": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
