--- a/client_side/package.json
+++ b/client_side/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.10.0",
     "react-slider": "^2.0.4",
     "sass": "^1.62.1",
+    "sweetalert2": "^11.7.5",
     "swiper": "^9.2.4"
   },
   "devDependencies": {
